1.2.9
  Maven85 [ADD TVShows]: Fix for adding a complete series (AmazonVOD)
  Maven85 Movies: Option to save each stream to its own folder
  Maven85 Fix Umlaut in "Remove Media"-dialog
  Maven85 Movies: Option to save streams to its own superfolder (per MediaList entry)
  Maven85 Remove xS support
  Maven85 Fix: Android add and remove
  Maven85 Pluginextensions
  Maven85 [ADD TVShows] overwriting fix
  Maven85 "++RenamedTitle++" removed from folder names and gui
  Maven85 Fix: Create/delete folders
  Maven85 Bugfixing

1.2.7 - 1.2.8
 Paging Fix

1.2.3 - 1.2.6
  Fix for Progress bar
  Fix for Paging TV-Shows
  Fix for Paging in single show

1.2.2
  SQL Support
  SQL Movies.db
  SQL Shows.db
  Resume Playing(Movies)
  Select Provider dialog
  New Look
  

1.0.7
  Improved Auto update
  Improved watched status (set as watched)
  Update button
  Suport for Music, you can add your music strms to the Kodi library.
  YouTube support
  Some fixes

0.4.7
  Improved Auto update
  Improved watched status (set as watched)
  Now you can write your strms to a samba share, with or without login credentials.
	Note: you have to set the share as source in kodi's file manager!
  Some fixes

0.4.4 - 0.4.6
  Some fixes

0.4.3
  New option: Update at startup
  New Funktion: Rename
  Some fixes

0.4.2 
  Some fixes

0.4.1 RC
New Funktion: Watched status for Movies and TV-Shows
New Funktion: Timed update for your content
  Some fixes

0.4.0 RC
  Some fixes

0.3.9 RC
  New Function: Shows-Collection
  Some fixes

0.3.8 RC
  Code cleaning part5
  Some fixes

0.3.7 RC
  Code cleaning part4
  Added new methods addTVShows, getEpisodes and getTVShowsFromList
  Some fixes

0.3.5 RC
  Code cleaning part3
  Added new methods markSeries and markMovies as watched
  Some fixes

0.3.2 RC1
  Code cleaning part2
  Added new methods addMovies and addSeries
  Movie strms are created in their own folder now 
  Some fixes

0.3.1 RC1
  Code cleaning part1
  Some fixes

0.1.9
  Fix for update loop

0.2.4